# ibazel-webpack-example

./: README.md  WORKSPACE.bazel  package.json
example_app/: BUILD.bazel  index.html  index.tsx  tsconfig.json  webpack.config.js
